attempts to fix spacing on index page

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@ $programs: (uva-praxis-program, chi-initiative, hope-mellon-scholars, cuny-gcdi,
 $categories: (mission, structure, research, people, support, directions, nuts-and-bolts);
 
 // Compass Variables
-$base-font-size: 18px;
+$base-font-size: 16px;
 $base-line-height: 30px;
 
 // Susy Variables
